# github-copilot-cli-agents

./: .gitignore  AGENTS.md  README.md  init.sh
.copilot/: mcp-config.json
.devcontainer/: devcontainer.json
.github/agents/: code_generation.agent.md  debate_critic.agent.md  generator_evaluator.agent.md  orchestrator.agent.md  planner_executor.agent.md
.squad/: decisions.md  team.md
.squad/decisions/: auth-api-generation.md  rest-vs-graphql.md  todo-api-implementation.md
app/: .env.example  config.js  package-lock.json  package.json  server.js
app/customer_support/: .env.example  README.md  main.py  pyproject.toml  register_agents.py
app/customer_support/definitions/: __init__.py  faq.py  refund.py  triage.py
app/customer_support/tests/: test_definitions.py  test_tools.py  test_workflow.py
app/customer_support/tools/: __init__.py  knowledge_base.py  refund_tools.py
app/customer_support/workflow/: __init__.py  handoff_workflow.py
app/middleware/: auth.js
app/routes/: auth.js  todo.js
app/services/: auth.js  todo.js
codegen/: customer_support_summary.md
docs/: copilot-cli-guide.md  github-multi-account-setup.md
patterns/code_generation/: README.md  team.md
patterns/debate_critic/: README.md  team.md
patterns/generator_evaluator/: README.md  team.md
patterns/planner_executor/: README.md  team.md
